refactor: 코드 품질 개선 및 객체지향 원칙 적용
  - 불필요한 주석 제거로 코드 가독성 향상
  - Java 16+ toList() 메서드 적용
  - DTO를 Record로 변환
  - 도메인 메서드 추가 (Tell, Don't Ask 원칙)
  - LockManager 타임아웃 설정으로 데드락 방지
  - RESTful API 개선
  - ErrorCode 중복 제거

  코치 피드백 반영 완료